fix [stylesheets]: background color on firefox

--- a/src/stylesheets/layouts/_layouts.scss
+++ b/src/stylesheets/layouts/_layouts.scss
@@ -1,5 +1,6 @@
 .site {
   overflow-x: hidden;
+  background: $color__pure-white;
 }
 
 .main {
